tests/untried/neg/t639.scala
package foo123

import a.*

@B
class C
